@@ -27,6 +27,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    lintOptions {
+        disable 'MissingTranslation'
+    }
 }
 
 dependencies {
